# CI_example

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  environment.yml
.github/workflows/: build_base_container.yml  ci.yml
include/: car.hpp  fleet.hpp  vehicle.hpp
src/: car.cpp  fleet.cpp  vehicle.cpp
tests/: integration_fleet_test.cpp  unit_car_test.cpp
